# chatbot

./: .env.example  .gitignore  Dockerfile  README.md  config.py  dashboard.html  main.py  pyproject.toml  railway.json  reproduce_bonjour.py  reproduce_crash.py  reproduction_result.txt  requirements.txt  smoke_test.py  test_bot.py  test_interface.html  validate_credit.py  validate_fixes.py  validate_variants.py
chatbot/intent/: intent_detector.prompt
chatbot/prompts/: commande.system.prompt  commande.user.prompt  credit_documents.system.prompt  credit_documents.user.prompt  credit_eligibility.system.prompt  credit_eligibility.user.prompt  human_handoff.system.prompt  human_handoff.user.prompt  info_credit.system.prompt  info_credit.user.prompt  location_delivery.system.prompt  location_delivery.user.prompt  product_extractor.system.prompt  (+10 more)
docs/: conversation_safety.md
engine/: intent_detector.py
integrations/: email.py  instagram.py  inventory.py  knowledge_base.py  messenger.py  shopify_client.py  whatsapp.py
knowledge/: credit_policy.json  credit_policy.txt  faq.json  warranty.json
llm/: client.py  prompts.py  response_generator.py
logic/: business_rules.py  flow_manager.py  handoff_manager.py  language_detector.py  memory_manager.py  qualification.py  router.py
models/: database.py  schemas.py
services/: chat_service.py  n8n_service.py  notification_service.py
static/: privacy.html
templates/: privacy.html
tests/: test_conversation_safety.py  test_order_tracking_shopify.py  test_robustness_v3.py  verify_robustness.py  verify_robustness_v2.py
(+10 files in other folders)
